--- a/index.html
+++ b/index.html
@@ -3,57 +3,54 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sample Map with Login</title>
+  <title>Sample Map</title>
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
   <link rel="stylesheet" href="css/styles.css">
   <style>
-    /* Basic styling for the login form */
-    #loginForm {
+    #map {
+      height: 100vh;
+      width: 100%;
+      display: none; /* Initially hide the map */
+    }
+    #login-form {
       position: absolute;
-      top: 50%;
+      top: 20%;
       left: 50%;
       transform: translate(-50%, -50%);
+      background: white;
       padding: 20px;
-      background-color: white;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-      z-index: 1000;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      z-index: 1000; /* Ensure it appears above the map */
     }
-
-    #loginForm input[type="text"],
-    #loginForm input[type="password"] {
+    #login-form input {
+      display: block;
+      width: 100%;
+      margin-bottom: 10px;
+      padding: 8px;
+      border: 1px solid #ddd;
+      border-radius: 4px;
+    }
+    #login-form button {
       width: 100%;
       padding: 10px;
-      margin: 5px 0;
-      border-radius: 5px;
-      border: 1px solid #ccc;
-    }
-
-    #loginForm button {
-      width: 100%;
-      padding: 10px;
-      background-color: #33a02c;
-      color: white;
+      background-color: #007bff;
       border: none;
-      border-radius: 5px;
+      color: white;
+      border-radius: 4px;
       cursor: pointer;
     }
-
-    #loginForm button:hover {
-      background-color: #2a8b23;
-    }
-
-    #map {
-      display: none; /* Hide the map initially */
+    #login-form button:hover {
+      background-color: #0056b3;
     }
   </style>
 </head>
 <body>
-  <div id="loginForm">
+  <div id="login-form">
     <h2>Login</h2>
-    <form id="login">
-      <input type="text" id="username" name="username" placeholder="Username" required>
-      <input type="password" id="password" name="password" placeholder="Password" required>
+    <form id="loginForm">
+      <input type="text" id="username" placeholder="Username" required>
+      <input type="password" id="password" placeholder="Password" required>
       <button type="submit">Login</button>
     </form>
   </div>
@@ -77,27 +74,27 @@
 
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet-ajax/2.1.0/leaflet.ajax.min.js"></script>
-  <script src="js/initMap.js"></script>
-  <script src="js/styles.js"></script>
-  <script src="js/layers.js"></script>
-  <script src="js/controls.js"></script>
-
+  <script src="js/map.js"></script>
   <script>
-    // Basic login validation
-    document.getElementById('login').addEventListener('submit', function(event) {
-      event.preventDefault();
-      const username = document.getElementById('username').value;
-      const password = document.getElementById('password').value;
+    // Handle login form submission
+    document.getElementById('loginForm').addEventListener('submit', function(event) {
+      event.preventDefault(); // Prevent form from submitting normally
 
-      // Placeholder login credentials
-      const validUsername = 'user';
-      const validPassword = 'password';
+      var username = document.getElementById('username').value;
+      var password = document.getElementById('password').value;
 
-      if (username === validUsername && password === validPassword) {
-        document.getElementById('loginForm').style.display = 'none';
-        document.getElementById('map').style.display = 'block'; // Show the map after login
+      // Perform basic validation
+      if (username && password) {
+        alert('Login successful!');
+        document.getElementById('login-form').style.display = 'none'; // Hide the login form
+        document.getElementById('map').style.display = 'block'; // Show the map
+
+        // Trigger map visibility change
+        if (typeof map !== 'undefined') {
+          map.invalidateSize(); // Ensure the map adjusts its size correctly
+        }
       } else {
-        alert('Invalid username or password');
+        alert('Please enter both username and password.');
       }
     });
   </script>
