Add initial project files

--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
   <!-- Leaflet Locate Control CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet-locatecontrol/0.72.0/L.Control.Locate.min.css" />
   <link rel="stylesheet" href="css/styles.css">
-  
- </head>
-<body>
+
+  <!-- Work Sans Font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+</head>
+<body class="work-sans-normal">
 
   <div id="login-form">
     <h2>Login</h2>
@@ -22,7 +26,6 @@
     <div id="result"></div>
   </div>
   
-  <div id="map-title">Internet Connectivity Map - Myanmar</div>
   <div id="map"></div>
  
   <!-- Define the SVG patterns -->
